--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "intelli-home-app",
-  "version": "0.0.1",
-  "author": "Ionic Framework",
+  "version": "0.0.2",
+  "author": "Gyoko & Momcho",
   "homepage": "https://ionicframework.com/",
   "scripts": {
     "ng": "ng",
@@ -27,7 +27,9 @@
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^5.0.0",
+    "apexcharts": "^3.19.0",
     "core-js": "^2.5.4",
+    "ng-apexcharts": "^1.2.3",
     "rxjs": "~6.5.1",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
